--- a/src/App.css
+++ b/src/App.css
@@ -192,7 +192,7 @@ footer{
     color: white;
     padding: 3rem 5rem;
     position:absolute;
-    bottom:-100%;
+    bottom:-100px;
 }
 
 .footer-top{
